--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,20 @@ default: &default
 development:
   primary:
     <<: *default
-    database: db/development.sqlite3
+    database: db/primary.sqlite3
     migrations_paths: db/migrate
+  primary_replica:
+    <<: *default
+    database: db/primary_replica.sqlite3
+    replica: true
   secondary:
     <<: *default
-    database: db/development_secondary.sqlite3
+    database: db/secondary.sqlite3
     migrations_paths: db/secondary_migrate
+  secondary_replica:
+    <<: *default
+    database: db/secondary_replica.sqlite3
+    replica: true
 
 test:
   <<: *default
